2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Get ABI version as well as library version.
 - Single "substitute" function for configure.ac and version header.
 doc/Doxyfile.in, src/util.cxx:
 - Make Doxygen see through some cpp macros and such that get in the way.
 - Removed obsolete Doxygen directive DETAILS_AT_TOP.
 include/Makefile.am, include/pqxx/version.hxx.template:
 - Forgot to add version header.
 doc/Doxyfile.in:
 - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
 src/Makefile.am:
 - Version according to ABI version, not full library version.
 tools/extract_version:
 - New --abi option to extract library ABI version.
 - New --help option.
2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Fixed compile warnings on some 32-bit configurations.
2009-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
 - Fixed mistake in tutorial example.  Thanks Patrick Daryll Glandien.
 - Closes #187.
2009-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
 - Don't build tarball again.
 - Deal with changed "make check" output.
 - Clean up and rebuild reference documentation.
2009-01-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 libpqxx.spec.in:
  - Depend on postgresql-libs and postgresql-devel, thanks Bob Knock
  - Install x86_64 libs in /usr/lib64, thanks Bob Knock
  - Use %configure, not ./configure, thanks Bob Knock
  - Removed some hard-coding of directories, thanks Bob Knock
 win32/vc-test.mak.template:
  - Got rid of superfluous dot in library name.
  - Got rid of unnecessary quotes, thanks Andrew Maclean.
2009-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
  - Several fixes, thanks Andrew Maclean.
2009-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Export throw_null_conversion, thanks Andrew Maclean
2008-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/Makefile.am: