@@ -19,8 +19,12 @@ AM_INIT_AUTOMAKE(libpqxx, @PQXXVERSION@)
 
 PQXXVERSION=@PQXXVERSION@
 PQXX_ABI=@PQXX_ABI@
+PQXX_MAJOR=@PQXX_MAJOR@
+PQXX_MINOR=@PQXX_MINOR@
 AC_SUBST(PQXXVERSION)
 AC_SUBST(PQXX_ABI)
+AC_SUBST(PQXX_MAJOR)
+AC_SUBST(PQXX_MINOR)
 
 AC_CONFIG_SRCDIR([src/connection.cxx])
 AC_CONFIG_HEADER([include/pqxx/config.h])
