@@ -1,4 +1,6 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in:
+ - Substitute full version information.
  doc/Doxyfile.in, src/util.cxx:
  - Make Doxygen see through some cpp macros and such that get in the way.
  - Removed obsolete Doxygen directive DETAILS_AT_TOP.
